# ferrovec

./: .gitignore  Cargo.toml  LICENSE  README.md
docs/: demo.html  index.html
js/: README.md  package-lock.json  package.json  tsconfig.json  tsup.config.ts
js/src/: coordinator.ts  core-loader.ts  embedder.ts  engine.ts  ferrovec.ts  index.ts  persistence.ts  protocol.ts  snapshot.ts  types.ts  worker.ts
js/src/core/: ferrovec.d.ts  ferrovec.js  ferrovec_bg.wasm  ferrovec_bg.wasm.d.ts
js/test/: orchestration.test.ts  real.test.ts
js/test/browser/: coord-defects.test.ts  coord.test.ts  opfs.test.ts  opfs.worker.ts  serve.ts
src/: config.rs  error.rs  hnsw.rs  lib.rs  simd.rs  wasm_api.rs
tests/: integration.rs  wasm.rs
