[package]
name = "ferrovec"
version = "0.3.2"
edition = "2021"
description = "A tiny, dependency-light HNSW vector index for approximate nearest-neighbor search — built to compile to WebAssembly."
license = "MIT"
repository = "https://github.com/singhpratech/ferrovec"
homepage = "https://singhpratech.github.io/ferrovec/"
readme = "README.md"
keywords = ["hnsw", "vector-search", "embeddings", "ann", "wasm"]
categories = ["algorithms", "data-structures", "wasm"]
# Keep the published crate lean — the JS package, site, and build outputs
# are not part of the Rust crate.
exclude = ["js/", "docs/", "pkg/", "PUBLISHING.md", ".github/", "*.html"]

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
serde = { version = "1", features = ["derive"] }
postcard = { version = "1", features = ["alloc"] }

# wasm-only boundary deps: native builds (and `cargo publish`) never see these.
[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "0.2"
js-sys = "0.3"
serde-wasm-bindgen = "0.6"
console_error_panic_hook = "0.1"

[target.'cfg(target_arch = "wasm32")'.dev-dependencies]
wasm-bindgen-test = "0.3"

[profile.release]
opt-level = "s"
lto = true
panic = "abort"
codegen-units = 1
